Opened 15 years ago

Closed 15 years ago

#770 closed defect (fixed)

zzufed .vc1 file crashes ffmpeg_g

Reported by: Diana Muscalu Owned by:
Priority: important Component: ffmpeg
Version: git-master Keywords:
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

use zzuf -c -s1:2000 -r0.001:1 ffmpeg_g -i SA00040.vc1 -f null - to crash ffmpeg. if i valgrind it does not output nothing.

Attachments (1)

SA00040.vc1 (23.5 KB ) - added by Diana Muscalu 15 years ago.
use this file in ffmpeg to reproduce the crash (-i corruptfile -f null - )

Download all attachments as: .zip

Change History (2)

by Diana Muscalu, 15 years ago

Attachment: SA00040.vc1 added

use this file in ffmpeg to reproduce the crash (-i corruptfile -f null - )

comment:1 by Michael Niedermayer, 15 years ago

Reproduced by developer: set
Resolution: fixed
Status: newclosed
Note: See TracTickets for help on using tickets.