ffmpeg: check return code from av_vsrc_buffer_add_frame() Fixed Ticket770 Bug found by: Diana Elena Muscalu

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>
(cherry picked from commit 1f273c2bf22c49e5f668debf52c497dabee636c7)

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>